static/style.css
@font-face {
  font-family: 'Noto Sans';
  src: local('Noto Sans'), local('NotoSans'),
       url('/fonts/noto-sans-v9-latin-regular.woff2') format('woff2');
}

@font-face {
  font-family: 'Inconsolata';
  src: url('/fonts/inconsolata-v20-latin-regular.woff2') format('woff2');
}

* {
  box-sizing: border-box;
}

html {
  height: 100%;
  font-family: 'Noto Sans', sans-serif;
}

body {
  margin: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
}

h1 {
  margin: 0;
}

a {
  color: #9DC;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

pre {
  font-family: 'Inconsolata', monospace;
}

li {
  padding: 0.1em 0;
}

kbd {
	display: inline-block;
	margin: 0 .1em;
	padding: .1em .6em;
  font-family: 'Noto Sans', sans-serif;
	font-size: 11px;
	color: #242729;
	text-shadow: 0 1px 0 #fff;
	background-color: #e4e6e8;
	border: 1px solid #9fa6ad;
	border-radius: 3px;
	box-shadow: 0 1px 1px rgba(12,13,14,0.15),inset 0 1px 0 0 #fff;
}

#wrapper {
  display: flex;
  flex-grow: 1;
}

#sidebar {
  background-color: #156;
  color: #fff;
  width: 240px;
  flex-shrink: 0;
  padding: 0.75em;
  position: relative;
}

#sidebar ul {
  margin: -0.1rem 0;
  padding-left: 0.5rem;
  list-style: none;
}

#sidebar h2:first-of-type {
  margin-top: 0;
}

#content {
  flex-grow: 1;
  padding: 0.75em;
  max-width: 960px;
}

#content a {
  color: #156;
}

#search_wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navigation {
  background-color: #145;
  color: #fff;
  padding: 0.75em;
}

@media (max-width: 720px) {
  #wrapper {
    flex-direction: column-reverse;
  }
  #sidebar {
    width: 100%;
  }
}

